syntax = "proto3";

package bakdata.trade.v1;

message Corporation {
  string id = 1;
  uint32 bafin_id = 2;
  string name = 3;
  string isin = 4;
}